--- a/fonts/stylesheet.css
+++ b/fonts/stylesheet.css
@@ -21,3 +21,14 @@
 	font-weight: 900;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Cinzel-Bold';
+	src: url('Cinzel-Bold.ttf');
+	src: local('Cinzel-Bold'), local('Cinzel-Bold'),
+		url('Cinzel/Cinzel-Bold.eot?#iefix') format('embedded-opentype'),
+		url('Cinzel/Cinzel-Bold.woff') format('woff'),
+		url('Cinzel/Cinzel-Bold.ttf') format('truetype');
+	font-weight: 900;
+	font-style: normal;
+}
