--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ body {
     background-color: #212529;
     font-family: 'Montserrat';
     margin: 0;
+    color: white;
+}
+
+li {
+    list-style: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Cinzel-Bold', serif;
+    margin: 0;
 }
 
 .top-head {
@@ -29,15 +39,13 @@ body {
 
 .social {
     display: flex;
-    color: white;
+    
     font-size: 14px;
 }
 .social li {
     padding-right: 10px;
 }
-li {
-    list-style: none;
-}
+
 
 .header-logo {
     display: flex;
@@ -56,7 +64,6 @@ li {
 .header-menu {
     display: flex;
     font-family: 'Cinzel';
-    color: white;
     margin: 10px;
 }
 
@@ -79,4 +86,128 @@ li {
 .header-menu li:last-child {
     padding: 15px 25px;
     margin-left: 120px;
+}
+.intro {
+    height: 946px;
+    background-image: url('img/hero-1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.menu-spec {
+    padding: 4px 7px 4px 12px;
+    background: rgba(194, 0, 0, 0.3);
+    transform: skewX(-15deg);
+    display: block;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: 500;
+
+    
+}
+.menu-spec span {
+    transform: skewX(20deg);
+    display: inline-block;
+}
+
+.intro-wrap {
+    padding: 160px 0;
+    display: flex;
+    justify-content: center;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.intro-left {
+    
+    margin-top: 160px;
+    display: flex;
+    flex-direction: column;
+    max-width: 50%;
+    
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 700;   
+    margin: 18px 0 20px 0;
+    line-height: 42px;
+}
+
+.intro-left div span {
+    color: #c4c4c4;
+    font-size: 14px;
+    font-style: italic;
+    margin-right: 28px;
+    
+}
+
+.intro-left div img {
+    border-radius: 50%;
+}
+
+.intro-right {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 626px;
+    padding: 35px 30px 40px 40px;
+    display: flex;
+    flex-direction: column;
+    max-width: 33.333%;
+    margin-left: 195px;
+
+}
+
+.intro-right__header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.intro-right__chevron {
+    justify-self: flex-end;
+    
+}
+
+
+h3 {
+    font-size: 20px;
+    font-weight: 700;
+    font-style: italic;
+    letter-spacing: 1px;
+    margin: 0;
+    
+}
+
+h4 {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 1px;
+    margin-left: 15px;
+}
+
+.intro-right li {
+    font-size: 12px;
+    font-style: italic;
+    color: #666666;
+    margin-right: 10px;
+}
+
+.intro-right__item {
+    display: flex;
+    margin-bottom: 40px;
+    
+}
+
+.right-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.intro-right__item img {
+    align-self: flex-start;
+}
+
+.intro-right__item-date {
+    display: flex;
 }
