--- a/style.css
+++ b/style.css
@@ -210,4 +210,75 @@ h4 {
 
 .intro-right__item-date {
     display: flex;
+    padding-left: 15px;
+}
+
+.latest-preview {
+    height: 396px;
+    background-color: #080808;
+    padding: 65px 0 34px 0;
+}
+
+.latest-preview__container {
+    display: flex;
+    height: 396px;
+    flex-direction: column;
+    margin: 0 auto 0 auto;
+    padding: 0 15px;
+    
+}
+
+.latest-preview__header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 35px;
+    margin-left: 350px;
+
+    
+    
+}
+
+.latest-preview__chevron {
+    justify-self: flex-end;
+    margin-right: 380px;
+    
+}
+
+.latest-preview__items {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
+
+.latest-preview__item {
+    display: flex;
+    flex-direction: column;
+    max-width: 262px;
+    margin-right: 30px;
+}
+
+.latest-preview__item h4 {
+    margin: 0;
+    line-height: 22px;
+    font-weight: 700;
+    font-size: 16px;
+    padding-top: 25px;
+}
+
+.latest-preview__item-date {
+    display: flex;
+    padding-left: 0;
+}
+
+.latest-preview li {
+    font-size: 12px;
+    font-style: italic;
+    color: #666666;
+    margin-right: 10px;
+}
+
+.lp-pic {
+    height: 180px;
+    
 }
