fix hover cursor news container, footer social

--- a/css/style.css
+++ b/css/style.css
@@ -618,6 +618,10 @@ h4 {
     margin-left: 0px;
 }
 
+.news__row-item > h4:hover {
+    cursor: pointer;
+}
+
 .news__row-item > .news__item-date {
     margin-left: 0px;
 }
@@ -1097,6 +1101,7 @@ h4 {
 
 .footer__social-item:hover {
     cursor: pointer;
+    background-color: #666666;
 }
 
 .footer__social-item i {
