--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,3 +1,7 @@
+html {
+    width: 100%;
+}
+
 body {
     width: 100%;
     background-color: #212529;
@@ -118,7 +122,7 @@ p {
     background-color: #a81d1d;
     padding: 17px 15px 13px 30px ;
     margin-right: 10px;
-    transform: skewX(-20deg);
+    transform: skewX(-15deg);
 }
 
 .header-menu > li:hover {
@@ -131,7 +135,7 @@ p {
 }
 
 .header-menu > li > span {
-    transform: skewX(20deg);
+    transform: skewX(15deg);
     display: inline-block;
 }
 
@@ -159,7 +163,7 @@ p {
     height: 279px;
     padding: 24px 30px 16px 30px;
     background-color: #080808;
-    transform: skewX(20deg);
+    transform: skewX(15deg);
     left: -280px;
     top: 52px;
     display: none;
@@ -254,7 +258,7 @@ p {
     width: 180px;
     background-color: #252525;
     padding: 13px 0 20px;
-    transform: skewX(20deg);
+    transform: skewX(15deg);
     top: 52px;
     left: 52px;
     display: none;
@@ -280,7 +284,6 @@ p {
 }
 
 .intro {
-    height: 946px;
     background-image: url('../img/hero-1.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -327,13 +330,14 @@ p {
     justify-content: center;
     max-width: 1170px;
     margin: 0 auto;
+    justify-content: space-between;
 }
 
 .intro-left {
-    margin-top: 160px;
     display: flex;
     flex-direction: column;
     max-width: 50%;
+    align-self: center;
 }
 
 h2 {
@@ -355,7 +359,6 @@ h2 {
     display: flex;
     flex-direction: column;
     max-width: 33.333%;
-    margin-left: 195px;
 }
 
 .intro-right__header {
