--- a/css/tablet.css
+++ b/css/tablet.css
@@ -151,4 +151,51 @@
     .news__guides-item {
         margin-bottom: 40px;
     }
+
+    .guide__container {
+        max-width: 1024px;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .guide__menu {
+        margin-left: 0;
+    }
+
+    .guide__row h4 {
+        font-size: 16px;
+    }
+
+    .guide_row-text-container-small {
+        margin-right: 35px;
+    }
+
+    .guide__row-first-item{
+        background-size: cover;
+        background-position: top center;
+    }
+
+    .guide__row-second-item {
+        background-size: cover;
+        background-position: top center;
+    }
+
+    .guide__row-third-item {
+        margin-right: 15px;
+        background-size: cover;
+        background-position: top center;
+    }
+
+    .guide__row-fourth-item {
+        margin-right: 15px;
+        background-size: cover;
+        background-position: top center;
+    }
+
+    .guide__row-fifth-item {
+        background-size: cover;
+        background-position: top center;
+    }
 }
