--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1009,12 +1009,36 @@ h4 {
     display: flex;
 }
 
-.raiting-container {
+.raiting-container-first, .raiting-container-second, .raiting-container-third, .raiting-container-fourth {
     position: relative;
 }
 
-.raiting-container::before {
+.raiting-container-first::before {
     content: "9.5";
+    margin-top: 18px;
+    display: flex;
+    margin-left: 16px;
+    font-size: 20px;
+}
+
+.raiting-container-second::before {
+    content: "8.5";
+    margin-top: 18px;
+    display: flex;
+    margin-left: 16px;
+    font-size: 20px;
+}
+
+.raiting-container-third::before {
+    content: "8.0";
+    margin-top: 18px;
+    display: flex;
+    margin-left: 16px;
+    font-size: 20px;
+}
+
+.raiting-container-fourth::before {
+    content: "7.5";
     margin-top: 18px;
     display: flex;
     margin-left: 16px;
@@ -1027,7 +1051,7 @@ h4 {
     margin-left: 7px;
 }
 
-.round {
+.round-first {
     fill: none;
     stroke: #c20000;
     stroke-width: 3;
@@ -1038,13 +1062,59 @@ h4 {
     left: 0;
     top: 0;
     z-index: 1000;
-  }
+}
 
-  .round:last-child {
-      stroke: #212529;
-      transform: rotate(90deg);
-      z-index: 500;
-  }
+.round-second {
+    fill: none;
+    stroke: #c20000;
+    stroke-width: 3;
+    stroke-linecap: round;
+    stroke-dasharray: 265;
+    transform: rotate(-90deg);
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+}
+
+.round-third {
+    fill: none;
+    stroke: #c20000;
+    stroke-width: 3;
+    stroke-linecap: round;
+    stroke-dasharray: 249;
+    transform: rotate(-90deg);
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+}
+
+.round-fourth {
+    fill: none;
+    stroke: #c20000;
+    stroke-width: 3;
+    stroke-linecap: round;
+    stroke-dasharray: 233;
+    transform: rotate(-90deg);
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1000;
+}
+
+  .round-back {
+    fill: none;
+    stroke: #212529;
+    stroke-width: 3;
+    stroke-linecap: round;
+    stroke-dasharray: 298;
+    transform: rotate(90deg);
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 500;
+}
 
 .instagram__item-date {
     display: flex;
