tablet adaptiv fix

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -77,11 +77,21 @@
 
     .news__container {
         flex-direction: column;
-        padding-right: 15px;
-        padding-left: 15px;
+        padding-right: 36px;
+        padding-left: 36px;
         margin-right: auto;
         margin-left: auto;
         max-width: 720px;
+    }
+
+    .news__text-container h3 {
+        letter-spacing: normal;
+        margin-right: 10px;
+    }
+
+    .news__row h4 {
+        letter-spacing: normal;
+        margin-right: 14px;
     }
 
     .news__left-column {
@@ -104,6 +114,11 @@
         display: flex;
         width: 220px;
         margin-right: 30px;
+    }
+
+    .news__row img {
+        width: 211px;
+        height: 166px;
     }
 
     .news__item-date {
@@ -154,8 +169,8 @@
 
     .guide__container {
         max-width: 1024px;
-        padding-right: 15px;
-        padding-left: 15px;
+        padding-right: 24px;
+        padding-left: 24px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -207,10 +222,18 @@
         flex-direction: column;
         height: auto;
         max-width: 720px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-left: 36px;
+        padding-right: 36px;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .instagram__left-column-item img {
+        margin-right: 30px;
+    }
+
+    .instagram__left-column-item-content h3 {
+        letter-spacing: 0.5px;
     }
 
     .instagram__left-column-navigation {
@@ -219,8 +242,6 @@
 
     .instagram__right-column {
         padding-top: 40px;
-        padding-left: 15px;
-        padding-right: 15px;
         width: auto;
     }
 
@@ -257,6 +278,42 @@
     .instagram__subscribe {
         max-width: 231px;
         padding-left: 151px;
+    }
+
+    .footer-section {
+        height: auto;
+    }
+
+    .footer__container {
+        padding-left: 39px;
+        padding-right: 15px;
+        max-width: 720px;
+        flex-direction: column;
+    }
+
+    .footer__container-column {
+        width: auto;
+    }
+
+    .footer__container-column-wrap {
+        display: flex;
+        margin-top: 20px;
+    }
+
+    .footer__container-column-item-content {
+        letter-spacing: normal;
+    }
+
+    .footer__container-column {
+        width: 95%;
+    }
+
+    .footer__container-column-item {
+        margin-right: 8px;
+    }
+
+    .footer__item-date {
+        margin-top: 4px;
     }
 
     
